--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,6 @@
   <title></title>
   <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
 
   <div class="row">
@@ -23,18 +22,19 @@
       <br>
       </br>
       <div class="info">
-        <form>
-          <input type="radio" id="Business Owner" name="buyer" value="Business Owner">
-          <label for="Business owner">Business owner</label><br>
-          <input type="radio" id="Client" name="buyer" value="Client">
+        <form action="" method="post">
+          <input type="radio" id="Register Your Service" required name="buyer" value="Register Your Service">
+          <label for="Register Your Service">Register Your Service</label>
+          <br>
+          </br>
+          <input type="radio" required id="Client" name="buyer" value="client">
           <label for="Client">Client</label><br>
 
-        </form>
       </div>
     </div>
   </div>
-  <button class="button-primary nextBtn" type="button" name="button">Next</button>
-
+  <button class=".btn-success" type="submit" name="button">Next</button>
+  </form>
 </body>
 
 </html>
