--- a/views/client.handlebars
+++ b/views/client.handlebars
@@ -26,8 +26,8 @@
             </tr>
             {{#each serviceProviders}}
                         <tr>
-                            <td>{{business}}</td>
-                            <td> <a href="/client/{{business}}">{{name}} {{surname}}</a></td>
+                            <td>{{business_name}}</td>
+                            <td> <a href="/client/{{id}}">{{first_name}} {{last_name}}</a></td>
                             
                         </tr>
             {{/each}}
