--- a/views/clientType.handlebars
+++ b/views/clientType.handlebars
@@ -8,9 +8,10 @@
 <body>
      {{#each clientType}}
     <div class="card">
-        <img src="/home/cebisapeter/Downloads/plumber.jpg" alt="Avela" style="width:100%">
-        <h1>Avela Bhinqa</h1>
-        <p class="title">Plumber</p>
+        {{!-- <img src="/home/cebisapeter/Downloads/plumber.jpg" alt="Avela" style="width:100%"> --}}
+         
+        <h1>{{first_name}} {{last_name}} </h1>
+        <p class="title">{{business_type}}</p>
         <p>I do home and commercial plumbing.</p>
         <div style="margin: 24px 0;">
             <a href="#"><i class="fa fa-dribbble"></i></a>
